# Magic3D

./: CMakeLists.txt  Makefile.win  README.md  basic_plane.3ds  game.txt  irgame.dev  irgame_private.h
actions/: great_fist.txt  high_kick.txt
config/: conf.txt  player.txt
fonts/: nyala.xml
items/: czapka1.txt  dzynsy.txt  sprys.txt
maps/: samplemap.mmap
models/: cube.irg  cube.x  czapka1.x  doryckie.irg  doryckie.x  dzynsy.txt  dzynsy.x  lemur - Kopia.irg  lemur.x  male1.irg  male1.x  player.irg  sprys.txt
npcs/: tester.txt
src/: action.cpp  action.h  camera.cpp  camera.h  config.h  dcontainer.cpp  dcontainer.h  defstable.cpp  defstable.h  drawable.cpp  drawable.h  game.cpp  game.h  globalcrap.cpp  globalcrap.h  icon.cpp  icon.h  interface.cpp  interface.h  inventory.cpp  inventory.h  io.cpp  io.h  irgame_private.h  item.cpp  item.h  keyboard.cpp  keyboard.h  logger.cpp  logger.h  machine.cpp  machine.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  mesh.cpp  mesh.h  minimap.cpp  (+21 more)
